# defect-triage

./: .env.example  .gitignore  CLAUDE.md  Milestone-Report.md  Pipeline-Walkthrough.md  README.md  defect-triage.pallets__flask-4992__attempt_2.json  pyproject.toml
docs/: architecture.md  conventions.md  milestone-plan.md  stack.md
docs/agents/: critic.md  localizer.md  patch-writer.md  test-runner.md
eval/: instances.txt  results.json
eval/langfuse/: trace-pallets__flask-4992.csv
scripts/: langfuse_smoke.py
src/defect_triage/: cli.py  graph.py  harness.py  instances.py  llm.py  state.py
src/defect_triage/nodes/: critic.py  intake.py  localizer.py  patch_writer.py  prioritizer.py  test_runner.py
tasks/: day-1-setup.md  day-2-localizer.md  day-3-patch-test.md  day-4-critic-loop.md  day-5-eval.md  day-6-report.md
