[project]
name = "defect-triage"
version = "0.1.0"
description = "Multi-agent defect localization and repair pipeline — milestone build"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Shivangi Aggarwal" }]
license = { text = "MIT" }
dependencies = [
    # Orchestration
    "langgraph>=0.2.40",
    "langchain-anthropic>=0.2.0",
    "anthropic>=0.40.0",
    # Observability
    "langfuse>=2.50.0",
    # SWE-bench harness (the official package)
    "swebench>=2.1.0",
    # Diff handling
    "unidiff>=0.7.5",
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    # Misc
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
]

[project.scripts]
defect-triage = "defect_triage.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/defect_triage"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter
